force-app/main/default/objects/Apttus_Config2__AdHocGroup__c/Apttus_Config2__AdHocGroup__c.object-meta.xml
<CustomObject>
    <description>Represents a totaling group</description>
    <label>Totaling Group</label>
    <nameField>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Totaling Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>