force-app/main/default/objects/Apttus_Config2__AdHocGroup__c/fields/Apttus_Config2__ClassificationId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ClassificationId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated product category. Only applicable to category totaling groups</description>
    <label>Category</label>
    <referenceTo>Apttus_Config2__ClassificationHierarchy__c</referenceTo>
    <relationshipLabel>Totaling Groups</relationshipLabel>
    <relationshipName>TotalingGroups</relationshipName>
    <type>Lookup</type>
</CustomField>