force-app/main/default/objects/Apttus_Config2__AdHocGroup__c/fields/Apttus_Config2__ConfigurationId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ConfigurationId__c</fullName>
    <description>ID of the associated configuration</description>
    <label>Configuration</label>
    <referenceTo>Apttus_Config2__ProductConfiguration__c</referenceTo>
    <relationshipLabel>Totaling Groups</relationshipLabel>
    <relationshipName>AdHocGroups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>